# desk-agent

./: .gitignore  AGENTS.md  PRODUCT.md  README.md  project.yml
AgentMatrix.xcodeproj/: project.pbxproj
AgentMatrix.xcodeproj/xcshareddata/xcschemes/: AgentMatrix.xcscheme
docs/: implementation-plan.md
firmware/: CMakeLists.txt  README.md
firmware/artifacts/: DeskAgent.uf2
firmware/src/: main.c  ws2812.pio
mac/AgentMatrix.xcworkspace/: contents.xcworkspacedata
mac/AgentMatrixApp/Sources/: AgentMatrixApp.swift  AppPreferences.swift  AppRuntime.swift  DeveloperSettingsView.swift  DisplaySettingsView.swift  GeneralSettingsView.swift  IntegrationSettingsView.swift  MatrixConnectionRow.swift  MenuBarContentView.swift  OnboardingView.swift  SettingsView.swift
mac/AgentMatrixCore/Sources/: AgentStateReducer.swift  CodexHookNormalizer.swift  CodexIntegrationInstaller.swift  MatrixCoordinator.swift  SerialMatrixTransport.swift  UF2FirmwareFlasher.swift  UnixDatagram.swift
mac/AgentMatrixHook/Sources/: main.swift
mac/AgentMatrixProtocol/Sources/: AgentEvent.swift  DisplayModels.swift  GeneratedAnimations.swift  MatrixProtocol.swift
mac/AgentMatrixTests/: AgentStateReducerTests.swift  CodexHookNormalizerTests.swift  CodexIntegrationInstallerTests.swift  MatrixCoordinatorTests.swift  ProtocolTests.swift  RuntimeMatrixTransportTests.swift  SerialMatrixTransportTests.swift  UF2FirmwareFlasherTests.swift  VirtualFirmwareTests.swift
scripts/: build-firmware.sh  build-mac.sh  generate-xcode-project.sh
shared/: animations.json
(+9 files in other folders)
